--- a/src/BookPlayer/BookPlayer.csproj
+++ b/src/BookPlayer/BookPlayer.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="6.0.1" />
     <PackageReference Include="LiteDB" Version="5.0.15" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="TagLibSharp" Version="2.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.4" />
     <PackageReference Include="Plugin.MediaManager" Version="0.7.2" />
